--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Tasks#index</h1>
-<p>Find me in app/views/tasks/index.html.erb</p>
+<h1>メッセージ一覧</h1>
+
+<table>
+    <tr>
+        <th>id</th>
+        <th>メッセージ</th>
+    </tr>
+    <% @tasks.each do |task| %>    
+        <tr>
+            <td><%= link_to task.id, task %> : </td>
+            <td><%= task.content %></td>
+        </tr>
+    <% end %>
+</table>
+
+<%= link_to '新規タスクの登録', new_task_path %>
