--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -4,4 +4,4 @@
 
 <%= link_to '一覧に戻る', tasks_path %>
 <%= link_to 'このメッセージを編集する', edit_task_path(@task) %>
-<%= link_to 'このメッセージを削除する', @message, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+<%= link_to 'このメッセージを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
