--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,3 +31,6 @@
     <% end %>
   </div>
 </div>
+
+    <%= form_with(model: @user, local: true) do |f| %>
+      <%= render 'layouts/error_messages', model: f.object %>
