--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,9 @@
-<h1>メッセージ一覧</h1>
+<h1>タスク一覧</h1>
 
 <table>
     <tr>
         <th>id</th>
-        <th>メッセージ</th>
+        <th>タスク</th>
         <th>ステータス</th>
     </tr>
     <% @tasks.each do |task| %>    
